2006-10-09  Kenneth Zadeck <zadeck@naturalbridge.com> 	    Sandra Loosemore  <sandra@codesourcery.com> 	* gcc/tree-pretty-print.c: Fixed comment rot. 	* gcc/lto-function-out.c (lto_flags_needed_for): New global. 	(decl_slot): Changed slot_num to signed. 	(output_block.named_label_stream, 	output_block.debug_decl_stream, 	output_block.debug_label_stream, 	output_block.debug_main_stream): New fields. 	(output_zero, output_sleb128_stream, output_string, output_real, 	output_integer, output_tree_flags, output_type_ref, 	output_record_start, output_expr_operand, output_local_vars, 	output_bb, output_function): 	Reordered output to accomodate new stream debugging. 	(output_uleb128_stream): Fixed sign bug and added stream 	debugging. 	(output_decl_index): Fixed precedence problem. 	(output_label_ref, output_named_labels, debug_out_fun): New function. 	(output_eh_must_not_throw, output_bb): Disabled serialization 	of eh regions. 	(output_constructor): Updated protocol to add missing fields. 	(output_expr_operand): Added NULL SET_NAME macro. 	(produce_asm, output_function): Added many more fields to the 	lto header. 	(produce_asm): Added dumping of types used. 	(lto_static_init): Added initialization of 	lto_flags_needed_for and LTO_tag_names. 	Changed initialization for lto_types_needed_for. 	(lto_output): Added checking of flag_generate_lto. 	(pass_ipa_lto_out): Fixed copy rot. 	* gcc/cfg.c (init_flow): Added the_fun parameter and generalized. 	* gcc/dwarf2out.c (dw_die_ref lto_void_type_die): New variable. 	(AT_string_form): Now checks flag_generate_lto to keep from using 	string table. 	(dwarf2out_init): Initialized lto_void_type_die. 	(lto_init_ref): Initialized ref->base_label to the proper 	value and made integers and void types work. 	* gcc/opts.c (common_handle_option): Set debug level when -flto is set. 	* gcc/lto-tree-tags.def (MAP_EXPR_TAGS, SET_NAME): New macros. 	(MODIFY_EXPR, VAR_DECL, WITH_SIZE_EXPR): Changed encoding. 	* gcc/lto-tags.h: Changed version numbe

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -967,7 +967,7 @@ C_OBJS = c-lang.o stub-objc.o $(C_AND_OBJC_OBJS)
 
 # Language-independent object files.
 OBJS-common = \
- lto-function-out.o                                                                 \
+ lto-function-out.o lto-stream-debug.o                                     \
  double-int.o tree-chrec.o tree-scalar-evolution.o tree-data-ref.o	   \
  tree-cfg.o tree-dfa.o tree-eh.o tree-ssa.o tree-optimize.o tree-gimple.o  \
  gimplify.o tree-pretty-print.o tree-into-ssa.o				   \
@@ -1804,6 +1804,9 @@ convert.o: convert.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) \
 
 double-int.o: double-int.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H)
 
+lto-stream-debug.o : lto-stream-debug.c $(CONFIG_H) $(SYSTEM_H) coretypes.h \
+   toplev.h $(FLAGS_H) $(PARAMS_H) input.h debug.h $(LTO_TAGS_H) \
+   lto-tree-flags.def lto-tree-tags.def 
 lto-function-out.o : lto-function-out.c $(CONFIG_H) $(SYSTEM_H) coretypes.h \
    $(TM_H) toplev.h $(TREE_H) $(EXPR_H) $(FLAGS_H) $(PARAMS_H) input.h \
    $(VARRAY_H) $(HASHTAB_H) langhooks.h $(BASIC_BLOCK_H) tree-iterator.h \
