* gcj/javaprims.h: Updated. 	* sources.am, Makefile.in: Rebuilt. 	* standard.omit.in: Removed process source files. 	* scripts/makemake.tcl: Removed ConcreteProcess special case. 	(emit_package_rule): Also special-case Process. 	(emit_process_package_rule): New proc. 	* Makefile.am (inner_nat_headers): Removed 	PLATFORM_INNER_NAT_HDRS. 	* configure: Rebuilt. 	* configure.ac (PLATFORM_INNER_NAT_HDRS): Removed subst. 	Don't create ConcreteProcess.java link. 	(PLATFORM): New subst. 	* java/lang/natWin32Process.cc: Updated. 	* java/lang/natPosixProcess.cc: Updated. 	* java/lang/natEcosProcess.cc: Updated. 	* java/lang/Win32Process.java (Win32Process): Renamed from 	ConcreteProcess. 	* java/lang/EcosProcess.java (EcosProcess): Renamed from 	ConcreteProcess. 	* java/lang/PosixProcess.java (PosixProcess): Renamed from 	ConcreteProcess. 	* include/win32.h (_Jv_platform_process): New define. 	* java/lang/natRuntime.cc (execInternal): Use 	_Jv_platform_process. 	* include/posix.h (_Jv_platform_process): New define.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117625 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -232,11 +232,15 @@ libgcj_la_LIBADD = \
 	classpath/native/fdlibm/libfdlibm.la \
 	java/lang/Object.lo \
 	java/lang/Class.lo \
+	java/process-$(PLATFORM).lo \
 	$(all_packages_source_files:.list=.lo) \
 	$(bc_objects) \
 	$(propertyo_files) \
 	$(LIBMAGIC) $(LIBFFI) $(ZLIBS) $(GCLIBS)
 libgcj_la_DEPENDENCIES = libgcj-$(gcc_version).jar \
+	java/lang/Object.lo \
+	java/lang/Class.lo \
+	java/process-$(PLATFORM).lo \
 	$(all_packages_source_files:.list=.lo) \
 	$(LIBLTDL) $(libgcj_la_LIBADD)
 libgcj_la_LINK = $(LIBLINK)
@@ -398,8 +402,7 @@ inner_nat_headers = java/io/ObjectOutputStream$$PutField.h \
 	gnu/java/net/PlainSocketImpl$$SocketInputStream.h \
 	gnu/java/net/PlainSocketImpl$$SocketOutputStream.h \
 	gnu/java/nio/PipeImpl$$SinkChannelImpl.h \
-	gnu/java/nio/PipeImpl$$SourceChannelImpl.h \
-	$(PLATFORM_INNER_NAT_HDRS)
+	gnu/java/nio/PipeImpl$$SourceChannelImpl.h
 
 nat_headers = $(ordinary_header_files) $(inner_nat_headers)
 nat_headers_install = $(ordinary_header_files)
