--- a/libjava/gcj/Makefile.in
+++ b/libjava/gcj/Makefile.in
@@ -187,7 +187,7 @@ PANGOFT2_LIBS = @PANGOFT2_LIBS@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PERL = @PERL@
 PKG_CONFIG = @PKG_CONFIG@
-PLATFORM_INNER_NAT_HDRS = @PLATFORM_INNER_NAT_HDRS@
+PLATFORM = @PLATFORM@
 QT_AWT_FALSE = @QT_AWT_FALSE@
 QT_AWT_TRUE = @QT_AWT_TRUE@
 RANLIB = @RANLIB@
