* sources.am, Makefile.in, include/config.h.in, configure: 	Rebuilt. 	* Makefile.am (nat_source_files): Added natConfiguration.cc. 	* gnu/classpath/natConfiguration.cc: New file. 	* configure.ac (AWT_TOOLKIT): New define. 	(LIBGCJ_PREFIX): Likewise. 	* gnu/classpath/Configuration.java: New file. 	* sources.am: Rebuilt. 	* scripts/makemake.tcl: Don't special case Configuration.java.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117648 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -660,6 +660,7 @@ grmiregistry_DEPENDENCIES = libgcj.la libgcj.spec
 ## This lists all the C++ source files in subdirectories.
 nat_source_files = \
 gnu/classpath/natSystemProperties.cc \
+gnu/classpath/natConfiguration.cc \
 gnu/gcj/natCore.cc \
 gnu/gcj/convert/JIS0208_to_Unicode.cc \
 gnu/gcj/convert/JIS0212_to_Unicode.cc \
