--- a/libjava/include/config.h.in
+++ b/libjava/include/config.h.in
@@ -1,5 +1,8 @@
 /* include/config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Name of default AWT toolkit */
+#undef AWT_TOOLKIT
+
 /* Define to one of `_getb67', `GETB67', `getb67' for Cray-2 and Cray-YMP
    systems. This function is required for `alloca.c' support on those systems.
    */
@@ -380,6 +383,9 @@
 
 /* Define if we want to use debug calls into the garbage collector. */
 #undef LIBGCJ_GC_DEBUG
+
+/* Installation prefix */
+#undef LIBGCJ_PREFIX
 
 /* Define if using POSIX threads on Linux. */
 #undef LINUX_THREADS
