2006-10-12  Andrew Haley  <aph@redhat.com>
        * java/lang/natThreadLocal.cc: New file.
        * java/lang/ThreadLocal.java: Rewrite to use native TLS.
        * Makefile.am: Add java/lang/natThreadLocal.cc.
        * sources.am: Move classpath/java/lang/ThreadLocal.java to
        java/lang/ThreadLocal.java.

2006-10-12  Andrew Haley  <aph@redhat.com>

        * java/lang/InheritableThreadLocal.java: Rename NULL to sentinel.
        * java/lang/ThreadLocal.java: Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117698 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/sources.am
+++ b/libjava/sources.am
@@ -4466,7 +4466,7 @@ java/lang/System.java \
 java/lang/Thread.java \
 classpath/java/lang/ThreadDeath.java \
 classpath/java/lang/ThreadGroup.java \
-classpath/java/lang/ThreadLocal.java \
+java/lang/ThreadLocal.java \
 classpath/java/lang/Throwable.java \
 classpath/java/lang/TypeNotPresentException.java \
 classpath/java/lang/UnknownError.java \
