* testsuite/libjava.jni/jni.exp (gcj_jni_build_header): Use 	-force. 	* testsuite/lib/libjava.exp (find_gcjh): Find 'gjavah' instead. 	* testsuite/libjava.cni/cni.exp (gcj_cni_build_headers): Pass -cni 	and -force to gcjh. 	* Makefile.in: Rebuilt. 	* Makefile.am (MYGCJH): Use gjavah.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@117914 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -396,7 +396,7 @@ omitted_headers = java/lang/ClassLoader.h java/lang/Thread.h \
 
 generic_header_files = $(ordinary_header_files) $(xlib_nat_headers)
 
-MYGCJH = gcjh1
+MYGCJH = gjavah
 
 $(generic_header_files): gcjh.stamp
 
