--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -7468,7 +7468,7 @@ omitted_headers = java/lang/ClassLoader.h java/lang/Thread.h \
 	java/lang/reflect/Proxy.h gnu/gcj/runtime/ExtensionClassLoader.h
 
 generic_header_files = $(ordinary_header_files) $(xlib_nat_headers)
-MYGCJH = gcjh1
+MYGCJH = gjavah
 inner_nat_headers = java/io/ObjectOutputStream$$PutField.h \
 	java/io/ObjectInputStream$$GetField.h \
 	java/nio/DirectByteBufferImpl$$ReadWrite.h \
